# HScDesign_project1

./: CMakeLists.txt  ReadMe.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
toolchain/: toolchain (copy).cmake
